CRASH - Render crashes Blender when you use AO Bounces in certain scenes, not in simple or empty scenes. #57811

Closed
opened 2018-11-13 12:51:10 +01:00 by Juan Gea · 10 comments

System Information (various systems)
All the systems have Windows 10 Pro V1803

i7-5960X with 64Gb of RAM, GTX1080
AMD Threadripper 2990WX with 64Gb of RAM and a GTX1080
i7-5820K with 32Gb of RAM and a GTX 970

Blender Version
Broken: 2.79.6 e732c6af3b
Worked: At some point before in the daily builds and in the 2.79 releaseversion

Short description of error

In certain scenes, when you enable AO bounces in Simplify and you render the scene, it crashes.
I managed to prepare the scene that crashes everytime you press F12 (or render it)

If you disable AO Bounces then it renders

Here is the file:

BUG_Optimize_AO_Compressed5.blend

Exact steps for others to reproduce the error
Open the .blend and press F12 or render it

**System Information** (various systems) All the systems have Windows 10 Pro V1803 i7-5960X with 64Gb of RAM, GTX1080 AMD Threadripper 2990WX with 64Gb of RAM and a GTX1080 i7-5820K with 32Gb of RAM and a GTX 970 **Blender Version** Broken: 2.79.6 e732c6af3bb Worked: At some point before in the daily builds and in the 2.79 releaseversion **Short description of error** In certain scenes, when you enable AO bounces in Simplify and you render the scene, it crashes. I managed to prepare the scene that crashes everytime you press F12 (or render it) If you disable AO Bounces then it renders Here is the file: [BUG_Optimize_AO_Compressed5.blend](https://archive.blender.org/developer/F5549505/BUG_Optimize_AO_Compressed5.blend) **Exact steps for others to reproduce the error** Open the .blend and press F12 or render it
Author

Added subscriber: @juang3d

Added subscriber: @juang3d
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Seems like the file is missing

Seems like the file is missing
Author

Sorry, fixed the file link.

Thanks!

Sorry, fixed the file link. Thanks!
Member

crash confirmed, need to run through Debug build still...

# Blender 2.79 (sub 6), Commit date: 2018-11-10 22:37, Hash 89c2ff31d93
bpy.context.space_data.context = 'RENDER_LAYER'  # Property
bpy.context.space_data.context = 'SCENE'  # Property

# backtrace
/blender-2.79-89c2ff31d93-linux-glibc224-x86_64/blender(BLI_system_backtrace+0x1d) [0x1bb732d]
/blender-2.79-89c2ff31d93-linux-glibc224-x86_64/blender() [0x118fc19]
/lib64/libpthread.so.0(+0x12f70) [0x7f4d6b7a4f70]
/blender-2.79-89c2ff31d93-linux-glibc224-x86_64/blender() [0x25f1b50]
/blender-2.79-89c2ff31d93-linux-glibc224-x86_64/blender() [0x26ca3fb]
/blender-2.79-89c2ff31d93-linux-glibc224-x86_64/blender(_ZN3ccl9CPUDevice13thread_renderERNS_10DeviceTaskE+0xe38) [0x2046dc8]
/blender-2.79-89c2ff31d93-linux-glibc224-x86_64/blender(_ZN3ccl8TaskPool9wait_workEPNS0_7SummaryE+0x141) [0x2c81cf1]
/blender-2.79-89c2ff31d93-linux-glibc224-x86_64/blender(_ZN3ccl7Session7run_cpuEv+0x33c) [0x214398c]
/blender-2.79-89c2ff31d93-linux-glibc224-x86_64/blender(_ZN3ccl7Session3runEv+0x43d) [0x2144afd]
/blender-2.79-89c2ff31d93-linux-glibc224-x86_64/blender(_ZN3ccl6thread3runEPv+0xe) [0x2c82cfe]
/blender-2.79-89c2ff31d93-linux-glibc224-x86_64/blender() [0x65b79cf]
/lib64/libpthread.so.0(+0x858e) [0x7f4d6b79a58e]
/lib64/libc.so.6(clone+0x43) [0x7f4d6b232593]
crash confirmed, need to run through Debug build still... ``` # Blender 2.79 (sub 6), Commit date: 2018-11-10 22:37, Hash 89c2ff31d93 bpy.context.space_data.context = 'RENDER_LAYER' # Property bpy.context.space_data.context = 'SCENE' # Property # backtrace /blender-2.79-89c2ff31d93-linux-glibc224-x86_64/blender(BLI_system_backtrace+0x1d) [0x1bb732d] /blender-2.79-89c2ff31d93-linux-glibc224-x86_64/blender() [0x118fc19] /lib64/libpthread.so.0(+0x12f70) [0x7f4d6b7a4f70] /blender-2.79-89c2ff31d93-linux-glibc224-x86_64/blender() [0x25f1b50] /blender-2.79-89c2ff31d93-linux-glibc224-x86_64/blender() [0x26ca3fb] /blender-2.79-89c2ff31d93-linux-glibc224-x86_64/blender(_ZN3ccl9CPUDevice13thread_renderERNS_10DeviceTaskE+0xe38) [0x2046dc8] /blender-2.79-89c2ff31d93-linux-glibc224-x86_64/blender(_ZN3ccl8TaskPool9wait_workEPNS0_7SummaryE+0x141) [0x2c81cf1] /blender-2.79-89c2ff31d93-linux-glibc224-x86_64/blender(_ZN3ccl7Session7run_cpuEv+0x33c) [0x214398c] /blender-2.79-89c2ff31d93-linux-glibc224-x86_64/blender(_ZN3ccl7Session3runEv+0x43d) [0x2144afd] /blender-2.79-89c2ff31d93-linux-glibc224-x86_64/blender(_ZN3ccl6thread3runEPv+0xe) [0x2c82cfe] /blender-2.79-89c2ff31d93-linux-glibc224-x86_64/blender() [0x65b79cf] /lib64/libpthread.so.0(+0x858e) [0x7f4d6b79a58e] /lib64/libc.so.6(clone+0x43) [0x7f4d6b232593] ```
Sergey Sharybin was assigned by Philipp Oeser 2018-11-21 10:31:54 +01:00
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

crashes here

else if(*num_hits == max_hits) {
(and num_hits is NULL? -- havent looked further)

1   ccl::ray_triangle_intersect8                                        geom_triangle_intersect.h 376 0x4a57773 
2   ccl::triangle_intersect8                                                geom_triangle_intersect.h 531 0x4a57773 
3   ccl::OBVH_bvh_intersect_instancing                       obvh_traversal.h          463 0x4a57773 
4   ccl::bvh_intersect_instancing                                      bvh_traversal.h           435 0x4e883ec 
5   ccl::scene_intersect                                                       bvh.h                     227 0x4e883ec 
6   ccl::kernel_path_scene_intersect                               kernel_path.h             82  0x4e883ec 
7   ccl::kernel_path_integrate                                            kernel_path.h             585 0x4e883ec 
8   ccl::kernel_path_trace                                                    kernel_path.h             751 0x4e883ec 
9   ccl::kernel_cpu_avx2_path_trace                                kernel_cpu_impl.h         98  0x4eedffd 
10  ccl::CPUDevice::path_trace                                        device_cpu.cpp            722 0x363cb82 
11  ccl::CPUDevice::thread_render                                 device_cpu.cpp            789 0x363d47c 
12  ccl::CPUDevice::thread_run                                       device_cpu.cpp            460 0x363b51e 
13  std::__invoke_impl<void, void (ccl::CPUDevice:: *&)(ccl::DeviceTask *), ccl::CPUDevice *&, ccl::CPUDevice::CPUDeviceTask *&>              invoke.h                  73  0x364c005 
14  std::__invoke<void (ccl::CPUDevice:: *&)(ccl::DeviceTask *), ccl::CPUDevice *&, ccl::CPUDevice::CPUDeviceTask *&>                                   invoke.h                  95  0x364acb5 
15  std::_Bind<void (ccl::CPUDevice:: *(ccl::CPUDevice *, ccl::CPUDevice::CPUDeviceTask *))(ccl::DeviceTask *)>::__call<void, int&&, 0ul, 1ul>(std::tuple<int&&>&&, std::_Index_tuple<0ul, 1ul>) functional                400 0x3649c73 
16  std::_Bind<void (ccl::CPUDevice:: *(ccl::CPUDevice *, ccl::CPUDevice::CPUDeviceTask *))(ccl::DeviceTask *)>::operator()<int, void>(int&&)       functional                484 0x364745b 
17  std::_Function_handler<void (int), std::_Bind<void (ccl::CPUDevice:: *(ccl::CPUDevice *, ccl::CPUDevice::CPUDeviceTask *))(ccl::DeviceTask *)>>::_M_invoke(std::_Any_data const&, int&&)     std_function.h            297 0x36455ac 
18  std::function<void (int)>::operator()(int) const          std_function.h            687 0x6747f9a 
19  ccl::TaskScheduler::thread_run                                                                                                                                                               util_task.cpp             314 0x6747168 
20  std::__invoke_impl<void, void ( *&)(int), int&>                                                                                                                                              invoke.h                  60  0x674a93f 
... <More>  

@Sergey: since you added BVH8, mind checking on this one?

crashes here `else if(*num_hits == max_hits) {` (and num_hits is NULL? -- havent looked further) ``` 1 ccl::ray_triangle_intersect8 geom_triangle_intersect.h 376 0x4a57773 2 ccl::triangle_intersect8 geom_triangle_intersect.h 531 0x4a57773 3 ccl::OBVH_bvh_intersect_instancing obvh_traversal.h 463 0x4a57773 4 ccl::bvh_intersect_instancing bvh_traversal.h 435 0x4e883ec 5 ccl::scene_intersect bvh.h 227 0x4e883ec 6 ccl::kernel_path_scene_intersect kernel_path.h 82 0x4e883ec 7 ccl::kernel_path_integrate kernel_path.h 585 0x4e883ec 8 ccl::kernel_path_trace kernel_path.h 751 0x4e883ec 9 ccl::kernel_cpu_avx2_path_trace kernel_cpu_impl.h 98 0x4eedffd 10 ccl::CPUDevice::path_trace device_cpu.cpp 722 0x363cb82 11 ccl::CPUDevice::thread_render device_cpu.cpp 789 0x363d47c 12 ccl::CPUDevice::thread_run device_cpu.cpp 460 0x363b51e 13 std::__invoke_impl<void, void (ccl::CPUDevice:: *&)(ccl::DeviceTask *), ccl::CPUDevice *&, ccl::CPUDevice::CPUDeviceTask *&> invoke.h 73 0x364c005 14 std::__invoke<void (ccl::CPUDevice:: *&)(ccl::DeviceTask *), ccl::CPUDevice *&, ccl::CPUDevice::CPUDeviceTask *&> invoke.h 95 0x364acb5 15 std::_Bind<void (ccl::CPUDevice:: *(ccl::CPUDevice *, ccl::CPUDevice::CPUDeviceTask *))(ccl::DeviceTask *)>::__call<void, int&&, 0ul, 1ul>(std::tuple<int&&>&&, std::_Index_tuple<0ul, 1ul>) functional 400 0x3649c73 16 std::_Bind<void (ccl::CPUDevice:: *(ccl::CPUDevice *, ccl::CPUDevice::CPUDeviceTask *))(ccl::DeviceTask *)>::operator()<int, void>(int&&) functional 484 0x364745b 17 std::_Function_handler<void (int), std::_Bind<void (ccl::CPUDevice:: *(ccl::CPUDevice *, ccl::CPUDevice::CPUDeviceTask *))(ccl::DeviceTask *)>>::_M_invoke(std::_Any_data const&, int&&) std_function.h 297 0x36455ac 18 std::function<void (int)>::operator()(int) const std_function.h 687 0x6747f9a 19 ccl::TaskScheduler::thread_run util_task.cpp 314 0x6747168 20 std::__invoke_impl<void, void ( *&)(int), int&> invoke.h 60 0x674a93f ... <More> ``` @Sergey: since you added BVH8, mind checking on this one?

This issue was referenced by blender/cycles@6a0a8248c4

This issue was referenced by blender/cycles@6a0a8248c4a1076db3e575e6f8e9a1f32e799c50

This issue was referenced by 968bf0df14

This issue was referenced by 968bf0df148c6fac7567860a64433daa97d042c9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57811
No description provided.