Fix T57811: Render crashes in certain scenes when AO Bounces are used